<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/settings_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/settings_volume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settings_music_bt"
        android:layout_width="43dp"
        android:layout_height="42dp"
        android:layout_marginStart="84dp"
        android:contentDescription="@string/profile_image_content_text"
        android:scaleType="centerInside"
        android:src="@drawable/play"
        android:onClick="playAndPauseMusic"
        app:layout_constraintBottom_toBottomOf="@+id/settings_music"
        app:layout_constraintStart_toEndOf="@+id/settings_music"
        app:layout_constraintTop_toTopOf="@+id/settings_music"
        app:layout_constraintVertical_bias="0.304"
        tools:srcCompat="@drawable/play" />

    <TextView
        android:id="@+id/settings_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/setting_dark_mode"
        app:layout_constraintEnd_toEndOf="@+id/settings_music"
        app:layout_constraintStart_toStartOf="@+id/settings_music"
        app:layout_constraintTop_toBottomOf="@+id/settings_music" />

    <Switch
        android:id="@+id/settings_dark_mode_switch"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:onClick="switchTheme"
        app:layout_constraintBottom_toBottomOf="@+id/settings_dark_mode"
        app:layout_constraintStart_toEndOf="@+id/settings_dark_mode"
        app:layout_constraintTop_toTopOf="@+id/settings_dark_mode"
        app:layout_constraintVertical_bias="0.516"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>